*Empty MediaWiki Message*

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -146,7 +146,7 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | XMPP Client || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes [[IM#Implementation_Recommendations|(1)]] || ? || No || style="background:lightgreen;" | Yes
 |-
-| Media Player || ? || ? || ? || ? || ? || ? 
+| Media Player || style="background:lightgreen;" | Yes || ? || ? || ? || ? || ? 
 |-
 |}
 
