--- a/Download.mw
+++ b/Download.mw
@@ -18,10 +18,12 @@ If you want to install a system to a microSD card, see [[Booting from SD]].
 ==== Neo FreeRunner ====
 Latest stable release: 
 http://downloads.openmoko.org/releases/Om2008.8/ 
+* Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
+* Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
 
 There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
 
-There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it. 
+There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it.
 
 ==== Neo 1973 ====
 There are no builds yet
