*Empty MediaWiki Message*

--- a/OpenmokoFramework.mw
+++ b/OpenmokoFramework.mw
@@ -19,6 +19,11 @@ FSO is an abbreviation for FreeSmartphone.Org. With FSO Openmoko is trying to ma
 * ''Question'': How do I work the Zhone (FSO demo app) UI?
 * ''Answer'': [[FSO UI Tutorial]]
 
+= Timeline=
+* august/september: [http://n2.nabble.com/FSO-milestone-2-Zhone-sending-digit-tp740432p740546.html milestone 3]
+* 01/07/2008: [[OpenmokoFramework/Status Update 3|milestone 2]]  archieved
+* 01/06/2008: [[OpenmokoFramework/Status Update 2|milestone 1]]  archieved
+
 =Purposes=
 * Give people the infrastructure to create solid and exciting software products based on the Openmoko platform
 * Support competing UIs while collaborating on developing services
