--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -120,6 +120,7 @@ after that you will need to restart the framework (kill the process and start it
 * A MythTV remote would be handy, just a subset of a BT keyboard for common commands with a few nice icons rather than letters on (large) keys.
 * Avahi search for HTTP services labeled say "remote" via ethernet (BT/LAN or Wifi). MythTV/Elisa and OOPresentation can develop their own html/flash/javascript/etc. "remotes" to hearts content without fine-grain syncing every change of code/GUI/API with your "OpenMoko Remote App". Avahi/HTTP also lets desktop/laptop browsers to control "remotes"; this means a bigger community.
 * Have one Neo work as a keyboard for another Neo (which becomes the screen)! (should be possible even now i guess)
+* Change the icons on the mouse screen, so they are oriented as one's mouse would be. Right now the left mouse button is on the left, which is good. However, the image of the mouse is facing the user and the left mouse button is to the right of the image.
 * '''Add your wish here'''
 
 ==Roadmap==
