/* Ideas for the application name */

--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -98,7 +98,7 @@ after that you will need to restart the framework (kill the process and start it
 *BlueRemote
 *<font color="#00FF00">ReMoko</font> or ReMoto (maybe some character that's a combination of t and k, at least in the splash/logo)
 *Mokomote
-*Mokomo (shorter)
+*Mokomo (shorter) -- + 1 vote
 *FreeMote (Builds on freerunner and remote) -- +1 vote
 *MokoKeyMouse (It can be a bit too long, so you can make it shorter as: MKM)
 
