*Empty MediaWiki Message*

--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -29,7 +29,7 @@ As people develop more sophisticated GPS applications, please note them here.
 * [[GPS_Navigation#roadmap|roadmap]] mapping system using freely available maps (US census TIGER, DGLib, shapefiles).
 * [[Navit]] a car navigation system with routing engine.
 * [http://svn.projects.openmoko.org/svnroot/openmoko-agpsui Openmoko AGPS UI project].
-* [[Orrery]], an unpopular Openmoko project for displaying the night sky.
+* [[Orrery]], a Openmoko project for displaying the night sky.
 * [[qpegps]] qtopia (arm PDA) based map viewer with gps features
 * [[QMapControl]] Qtopia based mapping widget. Displays maps and custom data, also other widgets can be bound to coordinates. GPS parser for the gllin output included.
 [http://projects.openmoko.org/projects/openvario/ here].
