/* Setting up Navit */

--- a/Navit.mw
+++ b/Navit.mw
@@ -25,11 +25,12 @@ I got navit set up and configured to the point where it follows me on the map.  
 * Install navit ipkg on NEO (because of a bug in opkg it's necessary to wget then install, instead of pointing opkg at the URL):
  wget http://www.acoveo.org/navit_0.1.0+svnrev1255-r0_armv4t.ipk
  opkg install --force-depends navit_0.1.0+svnrev1255-r0_armv4t.ipk
+This package includes a patch to navit which improves map panning speeds.
 * Or roll your own from svn using the toolchain (having checked out trunk in the navit directory, and assuming you have written navit_control):
  . /usr/local/openmoko/arm/setup-env
  om-conf navit --disable-samplemap
  om-make-ipkg navit navit_control
-You may want to apply the patch from acoveo: http://www.acoveo.org/openmoko/font_scaling_patch.diff
+You may want to apply the map panning patch from acoveo: http://www.acoveo.org/openmoko/font_scaling_patch.diff
 * Set up your local maps
 ** Openstreetmap - follow directions at http://wiki.navit-project.org/index.php/OpenStreetMaps
 *** There are some up-to-date maps already prepared, e.g.:
