*Empty MediaWiki Message*

--- a/FSO_ringtones.mw
+++ b/FSO_ringtones.mw
@@ -41,7 +41,8 @@ Then
   >>> import py_compile
   >>> py_compile.compile("receiver.py")
   >>> quit()
-#You may not have the py_compile module.
+#You may not have the py_compile module. You can install them like this:
+ opkg install python-compile
 
  /etc/init.d/fso-frameworkd restart && /etc/init.d/zhone-session stop && sleep 2 && /etc/init.d/zhone-session start
 #I've only run the above restart commands in Debian so I'm not sure if they are the same in the default FSO image
