/* Binaries */ Mention that it's packaged for Debian

--- a/Dfu-util.mw
+++ b/Dfu-util.mw
@@ -48,6 +48,8 @@ you can then run it with
 </pre>
 see below for full instructions.
 
+[http://packages.debian.org/dfu-util dfu-util is packaged]] for Debian ''>= lenny'', so can be installed with: <tt>apt-get install dfu-util</tt>
+
 Currently, there is a largely untested binary for Win32 (see [[Dfu-util-windows]]). Windows users can refer to [[No_Linux]] for a more tested approach.
 
 Compiling dfu-util on Mac:
