--- a/Debian.mw
+++ b/Debian.mw
@@ -75,6 +75,12 @@ Issues:
 The Freerunner uses the standard Linux bluez stack, installed with
  # apt-get install bluez-utils
 
+There is also a module missing from /etc/modules, which is critical to getting your device recognized. (kudos to johnsu01 on irc.freenode.net:#openmoko-debian for the find)
+ # echo ohci-hcd >> /etc/modules
+
+The first time you try this, you can also
+ # modprobe ochi-hcd
+
 The only atypical part of using bluetooth on the Freerunner is turning it on, which can be done with
  # echo 1 > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on
  # echo 0 > /sys/bus/platform/devices/neo1973-pm-bt.0/reset
