Rejected proposal: do not translate. Some voting.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -88,9 +88,9 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 | [[Roadmap]] || Emtpy bascially || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[Dfu-util/bg]] || Empty || [[User:Dolfje]], [[User:Marko Knöbl|Marko Knöbl]]
+| [[Dfu-util/bg]] || Empty || [[User:Dolfje]], [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[OUI (Organizationally Unique Identifiers)]] || duplicate of [[OUI]] || [[User:Marko Knöbl|Marko Knöbl]]
+| [[OUI (Organizationally Unique Identifiers)]] || duplicate of [[OUI]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
 | [[Openmoko/de]], [[Openmoko/es]], [[Openmoko/fr]], [[Openmoko/it]], [[Openmoko/ru]], [[Openmoko/zh tw]] || [[Openmoko]] has already been deleted by [[User:Sean|Sean]] || [[User:Marko Knöbl|Marko Knöbl]]
 |}
@@ -104,16 +104,6 @@ Can we please install/fix the following features for this wiki:
 * [http://www.mediawiki.org/wiki/Extension:GraphViz GraphViz] works with the commonly known dot language - it allows us to draw '''graphs''' using easy markup.
 * [http://www.mediawiki.org/wiki/Extension:AnyWikiDraw AnyWikiDraw] allows us to draw svg '''diagrams''' directly on the wiki page.
 * Make '''visited links''' a different color.
-
-==Wiki languages==
-Translating ''this'' wiki into other languages does not make much sense:
-* All translated pages need to be kept up-to-date. The people translating will not see every change made.
-* A partly (and often quite badly) done translation is no good.
-* People who use this wiki are sophisticated users, they are very likely to know English. They will not use localised pages as they do not trust them in matters of being up-to-date.
-* Rather create another wiki/information page with more static information for regular mass-market purchaser that do not care about 20 ways to connect their OpenMoko device with their PC but just about one easy one.
---[[User:Minime|Minime]] 13:43, 3 August 2007 (CEST)
-
-:I agree that technical pages don't need translating. However, I think that there are some pages for regular users which should be translated. Probably we could create a short list of pages which should be translated into other languages and prevent editors from translating other pages. --[[User:Marko Knöbl|Marko Knöbl]] 16:15, 6 August 2008 (UTC)
 
 == Change Sitename ==
 
@@ -129,5 +119,8 @@ The name of this wiki is currently "Openmoko". I think it should be "Openmoko Wi
 == Rejected requests ==
 
 When a requested Wiki Issue is voted for not to be done, it must be moved here, to make sure it won't get continously requested again.
+
+* '''Don't translate the wiki - rejected''' proposed by [[User:Minime|Minime]] August 2007, moved to rejected by [[User:Kempelen|Kempelen]] August 2008: the Documentation Team looks to support the idea.
+
 
 [[Category:Help]]
