--- a/Om_2007.2_Applications.mw
+++ b/Om_2007.2_Applications.mw
@@ -73,10 +73,7 @@ NONE
 |}
 
 == Additional/Community Applications ==
-Only a few applications that appear to be under consideration for addition to the core apps will be listed here. Community applications may be found on the [[Wish_List|Wish List]] and on [http://projects.openmoko.org projects.openmoko.org]
-
-=== List / Description ===
-* [[Display_Locker|Display Locker]]: Locks screen to prevent accidental triggering of events.
+Only a few applications that appear to be under consideration for addition to the core apps will be listed here. Not finished [[Openmoko Community Applications]] may be found on the [[Wish_List|Wish List]] and on [http://projects.openmoko.org projects.openmoko.org]
 
 === Screen Shots ===
 {| border="1"
