--- a/Om_2007.2_Applications.mw
+++ b/Om_2007.2_Applications.mw
@@ -39,7 +39,7 @@ All are currently included under Applications
 ==== Games ====
 Over 20 games including Sudoku and Mines.  Most are puzzle games of some form.
 
-see [[User's_Manual/Games]] for details
+see [[Games/Om 2007.2]] for details
 
 ==== Utilities ====
 NONE
