--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -101,28 +101,11 @@ Please add your application to the bottom of the list
 
 == Minimo ==
 
-{| border="1"
- |-
- |Wiki Link
- |[[Minimo]]
- |-
- |-
- |Video
- |Add your video hyperlink here
- |-
- |Screenshots
- |[[Image:Minimo-slashdot.jpeg|thumb|left]]
- |-
- |Application Status
- |Add your status notes here
- |-
- |Application Description
- |Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to standard Webkit based browser. 
- |-
- |Software License
- |Add your software license here
- |-
- |}
+[[Image:Minimo-slashdot.jpeg|thumb|left|Minimo web browser]]
+
+Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to standard Webkit based browser. 
+
+* Wiki Link: [[Minimo]]
 
 == orrery ==
 
