--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -107,6 +107,8 @@ Minimo is a Mozilla based web browser. It features full AJAX support and other g
 
 * Wiki Link: [[Minimo]]
 
+<div style="clear: left"></div>
+
 == orrery ==
 
 {| border="1"
