--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -71,6 +71,7 @@ This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all ti
 '''WiFi'''
  
 * [http://docs.openmoko.org/trac/ticket/1625 WiFi can only connect once]
+* [http://docs.openmoko.org/trac/ticket/1734 WiFi --- unknown] is caused by hald not running, which can be fixed by removing <tt>/etc/volatile.cache</tt> and rebooting
 
 '''Audio quality'''
 
