*Empty MediaWiki Message*

--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -9,130 +9,29 @@ This page is intended for ordinary end users of Openmoko smartphones.   It lists
 
 Any problems with the software below should be reported to the individual software developer rather than the OpenMoko core team.
 
-== Note to application developers ==
+== Applications ==
 
-No more than 8 featured Openmoko Community Applications should be listed on this page at a time.  The main place for Openmoko device owners to browse software remains http://projects.openmoko.org.  Applications listed here should have mass appeal as an advert of what the platform can do for Linux fans and ordinary smartphone users alike.
-
-Please provide
-* a link to your project page
-* a short video if possible
-* screenshots
-* indicate whether your application is stable or still under development 
-* state which models of OpenMoko phone the application is designed for.
-* a short paragraph describing features
-* the license the code is provided under
-
-Please add your application to the bottom of the list
-
-== TangoGPS ==
-
-{| border="1"
- |-
- |Project Homepage
- |http://www.tangogps.org
- |-
- |Wiki
- |[[TangoGPS]]
- |-
- |Video
- |http://www.youtube.com/watch?v=hn7wuxlTNvs 
- |-
- |Screenshots
- |Add your screenshots here
- |-
- |Application Status
- |Add your status notes here
- |-
- |Application Description
- |gps and map program
- |-
- |Software License
- |[http://www.opensource.org/licenses/gpl-2.0.php GPL v2]
- |-
- |}
-
-== Mokopedia ==
-
-{| border="1"
- |-
- |Project Homepage
- |http://mokopedia.projects.openmoko.org/
- |-
- |Video
- |http://www.rabenfrost.net/mokopedia_demo2.ogg
- |-
- |Screenshots
- |Add your screenshots here
- |-
- |Application Status
- |Add your status notes here
- |-
- |Application Description
- |Special compressed version of Wikipedia stored in your SD storage card.   Access to wikipedia wherever you are!
- |-
- |Software License
- |Add your software license here
- |-
- |}
-
-== Thumbtribes ==
-
-{| border="1"
- |-
- |Project Homepage
- |http://thumbtribes.mobi/
- |-
- |Video
- |It's a D-Bus daemon...Doh!
- |-
- |Screenshots
- |See above
- |-
- |Application Status
- |Funky
- |-
- |Application Description
- |Low bandwidth distance calculation daemon
- |-
- |Software License
- |GPL
- |-
- |}
-
-== Minimo ==
-
-[[Image:Minimo-slashdot.jpeg|thumb|left|Minimo web browser]]
-
+=== Browsers ===
+'''[[Minimo]]'''<br>
 Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to standard Webkit based browser. 
 
-* Wiki Link: [[Minimo]]
+=== GPS ===
+'''[[TangoGPS]]'''<br>
+gps and map program
 
-<div style="clear: left"></div>
+=== Other ===
+'''[[Mokopedia]]'''<br>
+Special compressed version of Wikipedia stored in your SD storage card.   Access to wikipedia wherever you are!
 
-== orrery ==
+'''[[Orrery]]'''<br>
+Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
 
-{| border="1"
- |-
- |Wiki Link
- |[[Orrery]]
- |-
- |-
- |Video
- |None available
- |-
- |Screenshots
- |[[Image:OrreryImage1.png|thumb|left]][[Image:OrreryImage2.png|thumb|right]]
- |-
- |Application Status
- |It works, and .ipk packages are available for 2007.2 and 2008.8.
- |-
- |Application Description
- |Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
- |-
- |Software License
- |GPL
- |-
- |}
+=== System Software ===
+This is software that mostly hasn't any GUI. This software is usually used by other programs.
+
+'''[[Thumbtribes]]'''<br>
+Low bandwidth distance calculation daemon
+
 
 [[Category:Applications]]
 [[Category:Openmoko]]
