--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -63,6 +63,7 @@ Here's a list of people who've expressed an interest in working on the SHR.
 * [[User:Pwgen|Eric Weiss]]
 * [[User:Andre613|Andre Racicot]]
 * [[User:Pyknite|Pyknite]]
+* [[User:write_erase|write_erse]]
 
 == How to join ==
 * Please add your name (with a link to your user page) to the list above.
