--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -97,7 +97,16 @@ For resolving DNS without restarting edit /etc/resolv.conf and fill it manually 
  nameserver 208.67.222.222
 This should solve most off your moko side networking issues. If you need any other help please refer to [[USB Networking]]
 
-{{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used }}
+{{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used 
+
+'''Problem''': parts of resolvconf are missing:  without the scripts under /etc/network/if-{up,down}.d, and /etc/resolvconf/run/enable-updates and /lib/resolvconf/list-records it does nothing, and even then, /etc/resolvconf/run should probably be a symlink to /var/run, or /etc/resolv.conf needs to be pointed at /etc/resolvconf/run/resolv.conf -- once all that's done, it seems to work as long as you add somehting like this to /etc/network/interfaces at the end of the usb0 stanza:
+
+    dns-nameservers 192.168.0.200
+    dns-search example.com
+
+and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order</tt>
+
+}}
 
 * Usb-networking will not work until rebooted after initial boot.
 
