--- a/Wifiweasel.mw
+++ b/Wifiweasel.mw
@@ -47,7 +47,7 @@ root@om-gta02:~#
 
 =FAIL=
 
-script to Auto connect to Open 802.11 wireless AP's  ***DOESNT WORK***
+script to Auto connect to Open 802.11 wireless AP's  ***DOESNT WORK*** i think something is wrong with the driver and it doesnt reset properly with this procedure, anyone else test re-associating with separate aps manually?
 
 ====wifiweasel====
 wifiweasel v2 - 
