Update information about Audio system usage.

--- a/OpenmokoFramework.mw
+++ b/OpenmokoFramework.mw
@@ -87,6 +87,7 @@ The low level audio service relies on a working alsa device driver. On top of th
 
 '''Pulseaudio''' is to be used for event sounds, where low-latency is necessary, e.g. touch click sounds and UI event acknowledge sounds. Pulseaudio is our general all-purpose mixer. Gstreamer will use the pulseaudio sink to feed audio through.
 
+On further reflection, it seems Pulseaudio will not be used as it currently doesn't provide good performance on this hardware.  Alsa/dmix will be used instead. [http://lists.openmoko.org/pipermail/devel/2008-July/000253.html]
 ====GSM====
 The low level GSM services expect a modem complying to GSM 07.07, GSM 07.05, and assorted GSM specifications, talking an AT-protocol over a serial line. If GSM 07.10 is supported, we use the multiplexing daemon
 * [http://www.freesmartphone.org/index.php/Implementations/gsm0710muxd gsm0710muxd]
