--- a/Edje.mw
+++ b/Edje.mw
@@ -17,5 +17,5 @@ After that you can install the needed tools with:
  sudo apt-get update && sudo apt-get install libedje-bin
 
 = Links =
-* [http://docs.enlightenment.org/api/edje/html/ docs.enlightenment.org] - offical edje documentation
+* [http://docs.enlightenment.org/api/edje/edje-reference.pdf docs.enlightenment.org] - offical edje documentation
 * [http://52grad.de/.stuff/freerunner/ 52grad.de] - example on using edj files
