Added two discount codes

--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -7,6 +7,8 @@ Please edit this page, remove the number you used and add "I used this code" in 
 '''When adding your discount code to the list please do so sorted by chronological date expiration''' (normally at the bottom).
 
 Here's the list
+* hxyqjk
+* s7bvna
 
 Also, a 20%-off code . Can be reused.
 
