some notes on improving the way 0.03 beta works.

--- a/Mofi.mw
+++ b/Mofi.mw
@@ -22,6 +22,15 @@ Information on the project can be found on the Moko forge at http://projects.ope
 
 An RSS feed is also available at http://feeds.feedburner.com/MofiProjectNewsOpenMokoProjects containing latest news for the project.
 
+== Using Mofi ==
+
+One change enables the disconnect functionality in 0.03 beta, which greatly increases the usability of Mofi.  Just add the following to the end of <code>/usr/lib/mofi/disconnect.sh</code>
+
+ killall wpa_supplicant
+ killall udhcpc
+
+This makes it possible to (I believe) shut down the wifi to conserve battery.  You should also be able to connect at home, use the wifi, then disconnect, take the phone to your local wifi hotspot, then connect again, without trouble (I'm using FSO, and have yet to test the hotspot theory, however).
+
 == Installation ==
 
 === Through opkg ===
