/* Known Issues */ Added more OpenDNS nameservers

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -90,11 +90,13 @@ This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all ti
 Add this line in /etc/network/interfaces:
 
  up echo nameserver 208.67.222.222 >/etc/resolv.conf
+ up echo nameserver 208.67.220.220 >>/etc/resolv.conf
 This is to be inserted below gateway address and above the bluetooth networking. After this a reboot is required.
 
 For resolving DNS without restarting edit /etc/resolv.conf and fill it manually by adding the following line:
 
  nameserver 208.67.222.222
+ nameserver 208.67.220.220
 This should solve most off your moko side networking issues. If you need any other help please refer to [[USB Networking]]
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used 
