/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3136,9 +3136,17 @@ How to take:
 | HsinChu
 | yes
 |-
+| 10. Gary Pai(gary.pai@)
+| 1
+| 1
+| 0
+| HsinChu
+| yes
+|-
+
 |Total number:
-| 13
-| 7
+| 14
+| 8
 | 0
 | 
 | 
