--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3136,17 +3136,17 @@ How to take:
 | HsinChu
 | yes
 |-
-| 10. Gary Pai(gary.pai@)
+<s>| 10. Gary Pai(gary.pai@)
 | 1
 | 1
 | 0
 | HsinChu
 | yes
-|-
+</s>|-
 
 |Total number:
-| 14
-| 8
+| 13
+| 7
 | 0
 | 
 | 
