--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -95,7 +95,8 @@ This is to be inserted below gateway address and above the bluetooth networking.
 
 For resolving DNS without restarting, run the following command:
 
- echo -e "nameserver 208.67.222.222\nnameserver 208.67.220.220" > /etc/resolv.conf
+ echo nameserver 208.67.222.222 > /etc/resolv.conf
+ echo nameserver 208.67.220.220 >> /etc/resolv.conf
 This should solve most of your moko side networking issues. If you need any other help please refer to [[USB Networking]]
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used 
