--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -93,7 +93,7 @@ Add these lines in /etc/network/interfaces:
  up echo nameserver 208.67.220.220 >> /etc/resolv.conf
 This is to be inserted below gateway address and above the bluetooth networking. After this it will be set on every reboot.
 
-For resolving DNS without restarting, run the following command:
+For resolving DNS without restarting, run the following commands:
 
  echo nameserver 208.67.222.222 > /etc/resolv.conf
  echo nameserver 208.67.220.220 >> /etc/resolv.conf
