--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -6,7 +6,7 @@ There are other ways to enable wireless communications on the Neo, including [[B
 
 === Where is the GUI? ===
 
-In the Settings application on Om2008.8, there's a "WiFi" item. If it says "WiFi unknown", you can delete the /etc/volatives.cache file and reboot. It should work after that. Otherwise there's also [[lint-wifi]].
+In the Settings application on Om2008.8, there's a "WiFi" item. If it says "WiFi unknown", you can delete the /etc/volatives.cache file and reboot. It should work after that.[http://docs.openmoko.org/trac/ticket/1734] Otherwise there's also [[lint-wifi]].
 
 Refer to the section below, [[#Available Software|"Available Software"]] to find out what else might be available.
 
