--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -19,7 +19,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 <td>
 * 15/8: Debian on the FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html announced], [http://wiki.debian.org/DebianOnFreeRunner instructions].
 * 8/8: Openmoko team [http://lists.openmoko.org/pipermail/community/2008-August/025602.html releases] distribution formerly called ASU as [[Om 2008.8]] .
-* 4-5/8: Openmoko is at Linuxworld, San Francisco
+* 4-5/8: Openmoko is at Linuxworld, San Francisco. [http://www.youtube.com/watch?v=jWJjNF36DfI Video].
 * 30/7: The FSO distribution releases [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
 * 25/7: Community helps, [[GPS Problems]] fixed
 * 20/7: [[Debian]] added to the [[Distributions]] page
