*Empty MediaWiki Message*

--- a/OUI.mw
+++ b/OUI.mw
@@ -26,6 +26,11 @@ by the owner of the OUI.
 | 01-55-FF
 | 2008-07-07
 | Factory allocation for GTA02 production
+|-
+| 015600
+| 0179FF
+| 2008-08-21
+| Factory allocation for GTA02 production
 |}
 
 ==Generating MAC addresses==
