/* Setting date/time from your linux box */ --utc doesn't seem to work on OM2008.8, but -u does

--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -16,7 +16,7 @@ where ''MM'' is the month, 01-12; ''DD'' is the day, 01-31; ''hhmm'' is the time
 
 == Setting date/time from your linux box ==
 
-  ssh root@openmoko "date --utc -s `date --utc +%m%d%H%M%Y.%S`"
+  ssh root@openmoko "date -u -s `date -u +%m%d%H%M%Y.%S`"
 
 == Setting the date/time automatically with NTP ==
 
