/* How to install it? */

--- a/Switching_Keyboards_on_Om_2007.2.mw
+++ b/Switching_Keyboards_on_Om_2007.2.mw
@@ -50,7 +50,7 @@ Cons:
 
 ===How to install it?===
 
-If you use a ScaredyCat release (http://buildhost.automated.it/OM2007.2/), use the following:
+If you use a ScaredyCat release (http://buildhost.automated.it/OM2007.2/) or [http://downloads.openmoko.org/releases/Om2008.4/ Om200.8.4], use the following:
 
  opkg remove -force-depends multitap-pad
  opkg install matchbox-keyboard-inputmethod
