*Empty MediaWiki Message*

--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -6,6 +6,8 @@ __NOTOC__
 <DIV ALIGN=CENTER><big>'''Willkommen im öffentlichen [[Openmoko]]&trade; Wiki'''</big><br></DIV>
 <BR>
 
+'''Diese Seite ist nicht immer aktuell. Am Besten ab und zu mal auf der englischen [[Main Page]] nachschauen''' (und dann möglichst die wichtigen Änderungen hier eintragen).
+
 ==<font color=75d806>Neuigkeiten und Ereignisse</font>==
 <table class="wikitable" cellspacing="0" cellpadding="0" style="color:white">
 <tr style="background:#ff6600; text-align:center; font-weight:bold">
@@ -211,7 +213,6 @@ Die Mitglieder der Openmoko-Community möchten [[FIC/de|FIC]] dafür danken, das
 * [[Wish List - Hardware]] - Eine Sammlung von Ideen, die wir in der nächsten Neo1973 Version sehen möchten
 * [[Media Content]] - Welche Arten von Medien können wir auf dem Gerät nutzen (die keine Software sind)?
 * [[Testimonials]] - Wie bist du zu Openmoko gekommen?
-* [[Buying Interest List]] - (Keine offizielle Liste oder Vorbestellungen) Hast du schon Geld für das Neo1973 bei Seite gelegt? Füge einfach deinen Namen hinzu.
 * [[Style Sheet]] - Der '''''richtige''''' Weg "Openmoko" und andere Begriffe zum Thema zu schreiben
 * [[iPhone/de]] -  Vergleich zwischen dem Apple iPhone und dem FIC Neo1973
 * [[Translation]] -  Übersetzung von Openmoko
