--- a/Minimo.mw
+++ b/Minimo.mw
@@ -38,6 +38,22 @@ Using Minimo with the stock Om2008.8 gets annoying because the keyboard always t
 
 I also highly recommend getting [[GPRS]] going so that you can browse on the go!
 
+== Running on Om2008.4 ==
+
+Download the minimo package:
+
+  wget http://www.ginguppin.de/files/minimo.tar.bz2
+
+Unpack it: 
+
+  tar -xjf minimo.tar.bz2
+
+and install: 
+
+  opkg install minimo_*
+
+If any packages are missing, just install it from repository. 
+
 == Running in Xephyr PC environment ==
 
 Here are instructions on how to run minimo in Xephyr PC environment and how to use other third party packages too. 
