--- a/Bare_metal.mw
+++ b/Bare_metal.mw
@@ -41,6 +41,8 @@ SECTIONS
 
 === Makefile ===
 
+Change the CROSS variable to point at the location of your cross-compiler.  The example assumes a build environment was setup with the [[MokoMakefile]] in <tt>/mnt/oe/openmoko</tt>.
+
 <pre>
 CROSS=/mnt/oe/openmoko/build/tmp/cross/arm-angstrom-linux-gnueabi/bin/
 CC=${CROSS}gcc
