/* Option 2, using AnalogX */  Adding the actual program since I spent 5 minutes searching for something that should've ideally just been instantly gotten. The analogX site is a darn mess.

--- a/Neo_1973_and_Windows.mw
+++ b/Neo_1973_and_Windows.mw
@@ -72,7 +72,7 @@ After you have done all this, the Neo will be able to route through the Windows 
 
 AnalogX is a lightweight, free network proxy for Windows. It can proxy HTTP, FTP, SMTP and other protocols. It's very easy to set up and works with any software on the phone that supports proxies (eg. opkg).
 
-* Download and install AnalogX onto your Windows PC (http://www.analogx.com)
+* Download and install AnalogX onto your Windows PC (http://www.analogx.com)  (http://www.analogx.com/files/proxyi.exe) This is the actual program used.
 * Run AnalogX. The default configuration should be ok: open mode, all protocols on. 
 * Connect your phone using the USB cable as normal.
 * Configure opkg to use the proxy by editing /etc/opkg/opkg.conf. There's 2 lines to uncomment and change.
@@ -81,7 +81,6 @@ AnalogX is a lightweight, free network proxy for Windows. It can proxy HTTP, FTP
 * opkg should now work via the proxy.
 
 Other apps like [[Minimo]] can also be configured to use a proxy. Use the HTTP proxy URL as above.
-
 
 ==== Option 3, using IP Forwarding and extra routing ====
 
