--- a/Bare_metal.mw
+++ b/Bare_metal.mw
@@ -4,7 +4,11 @@ Here is an example of how to run your own C code on the bare metal, without any 
 
 The example program does nothing but blink the LCD backlight on and off.  A simple first exercise might be to change it to blink out "hello world" in morse code.
 
+Download: [http://meshy.org/~ato/upload/bare-metal-moko.tar.gz bare-metal-moko.tar.gz] (4Kb)
+
 === C code (app.c) ===
+
+The GPIO Port B data register (GPBDAT) of the S3C2410 is located at physical address 0x56000014.  The LCD backlight is controlled by GPB0, so we enter an infinite loop toggling bit 0 of GPBDAT on and off.  The for loop is to just sleep for a while so that it flashes on and off slow enough that a human can see it.
 
 <pre>
 #define GPBDAT *((volatile unsigned long*)0x56000014)
@@ -21,6 +25,8 @@ void cstart(void)
 
 === Assembler head (app.S) ===
 
+This is a tiny piece of ARM assembler that will be the first instructions in our program.  The bootloader will execute this after loading our program into memory.  We simply set the stack pointer register to somewhere in RAM and jump to our C code.
+
 <pre>
 .text
 .globl _start
@@ -32,6 +38,8 @@ _start:
 
 === Linker script (app.lds) ===
 
+You can setup specific instructions for the linker here to tell it how things should be layed out in memory.  You might be able to get global variables working by fiddling with this, for example.  For now we just say our program will be running at 0x35000000.
+
 <pre>
 SECTIONS
 {
@@ -41,7 +49,7 @@ SECTIONS
 
 === Makefile ===
 
-Change the CROSS variable to point at the location of your cross-compiler.  The example assumes a build environment was setup with the [[MokoMakefile]] in <tt>/mnt/oe/openmoko</tt>.
+Change the CROSS variable to point at the location of your cross-compiler.  The example assumes a build environment was setup with the [[MokoMakefile]] in <tt>/mnt/oe/openmoko</tt>.  We first compile, asssemble and link our code into an ELF binary.  It seems like u-boot has some support for using ELF files directly, but we'll instead extract the raw machine code from the ELF using objcopy and load it manually.
 
 <pre>
 CROSS=/mnt/oe/openmoko/build/tmp/cross/arm-angstrom-linux-gnueabi/bin/
@@ -54,6 +62,42 @@ app.bin: app.elf
 app.elf: app.S app.c
 	${CC} -Wall -nostdlib $^ -o $@ -T app.lds
 </pre>
+
+=== Kermit script (download.kermit) ===
+
+We use [http://www.columbia.edu/kermit/ck80.html C-Kermit] to download our binary code into the phone's memory.  We do this by issuing <tt>loadb 0x350000000</tt> to u-boot to tell it to receive a file into address 0x35000000.  We then send the file using the kermit protocol.  Finally we tell u-boot to jump to address 0x35000000 and start executing our program.
+
+<pre>
+set carrier-watch off
+set handshake none
+set flow-control none
+robust
+set file type bin
+set file name lit
+set rec pack 1000
+set send pack 1000
+set window 5
+
+# This is for qemu, with serial on a TCP socket
+set host localhost 1200 /raw-socket
+
+# Try something like this for USB/serial on a real physical device.
+#set line /dev/ttyUSB0
+#set speed 115200
+
+# This will upload app.bin to address 0x35000000 and execute it.
+
+connect /trigger:# /quietly
+< echo loadb 35000000
+connect /trigger:{Ready for binary} /quietly
+send app.bin
+connect /trigger:# /quietly
+< echo go 35000000
+echo
+connect /quietly
+quit 0
+</pre>
+
 
 == Using with qemu ==
 
