*Empty MediaWiki Message*

--- a/Bare_metal.mw
+++ b/Bare_metal.mw
@@ -166,3 +166,7 @@ neo_bl_switch: LCD Backlight now off.
 neo_bl_switch: LCD Backlight now on.
 ...
 </pre>
+
+[[Category:Technical]]
+[[Category:Software (non openmoko)]]
+[[Category:Documentation]]
