*Empty MediaWiki Message*

--- a/Other_OSes.mw
+++ b/Other_OSes.mw
@@ -51,6 +51,8 @@ Anything other than Linux or WinCE?
 
 e.g. OpenBSD or maybe [[FreeBSD]] or [[NetBSD]]?
 
+You can write your own OS by running your own code on the [[bare metal]].
+
 == See also ==
 * [[OpenMoko-supported hardware]]
 
