/* Where is the GUI? */

--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -4,7 +4,7 @@ This page documents the [http://en.wikipedia.org/wiki/Wireless_networking wirele
 
 There are other ways to enable wireless communications on the Neo, including [[Bluetooth]]. For Bluetooth solutions, see [[How to use bluetooth to transfer data between Neo and Desk-top]] and [[Manually using Bluetooth]].
 
-=== Where is the GUI? ===
+== Using the GUI ==
 
 In the Settings application on Om2008.8, there's a "WiFi" item. If it says "WiFi unknown", you can delete the /etc/volatives.cache file and reboot. It should work after that.[http://docs.openmoko.org/trac/ticket/1734] Otherwise there's also [[lint-wifi]].
 
