--- a/Bare_metal.mw
+++ b/Bare_metal.mw
@@ -10,6 +10,8 @@ Download: [http://meshy.org/~ato/upload/bare-metal-moko.tar.gz bare-metal-moko.t
 
 The GPIO Port B data register (GPBDAT) of the S3C2410 is located at physical address 0x56000014.  The LCD backlight is controlled by GPB0, so we enter an infinite loop toggling bit 0 of GPBDAT on and off.  The for loop is to just sleep for a while so that it flashes on and off slow enough that a human can see it.
 
+Note that without extra work you won't be able to use global variables or string constants.  You might be able to fix this by experimenting with U-boot's ELF support and linker scripts.  Of course you will also not be able to use any system calls or the C library as you are running without an OS.
+
 <pre>
 #define GPBDAT *((volatile unsigned long*)0x56000014)
 
