--- a/Download.mw
+++ b/Download.mw
@@ -23,6 +23,8 @@ http://downloads.openmoko.org/releases/Om2008.8/
 
 There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
 
+There is *NO* feed yet at http://downloads.openmoko.org/repository/testing/ officially setup, don't use it.
+
 There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it.
 
 ==== Neo 1973 ====
