--- a/Angstrom_on_Neo1973.mw
+++ b/Angstrom_on_Neo1973.mw
@@ -1,4 +1,4 @@
-This page describes the process on getting the [http://www.angstrom-distribution.org Ångstrom distribution] running on Neo1973-GTA01. These instructions will evolve as better support is added - for now this is just a quick list on the required steps.
+This page describes the process on getting the [http://www.angstrom-distribution.org Ångström distribution] running on Neo1973-GTA01. These instructions will evolve as better support is added - for now this is just a quick list on the required steps.
 
 {{note|These instructions will not result in a proper installation supporting the device. There will be no power management, no GSM, no GPS, etc. This is just for hacking and fun.}}
 
