/* Dublin */ is this still open?

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1115,6 +1115,10 @@ To register your interest for the Dublin shipment please post a comment on this 
 * [http://wiki.openmoko.org/wiki/Special:Emailuser/aclearn Aclearn] - by the blog this makes me no.11 (nope, 1 person dropped out so you are number 10 - [http://wiki.openmoko.org/wiki/Special:Emailuser/patchrick Patchrick])
 * Stas
 * [http://wiki.openmoko.org/wiki/Special:Emailuser/Stingray Paul P. Komkoff Jr]
+* [[User:Ebel|Ebel]] 11:57, 22 August 2008 (UTC)
+
+==== Still open? ====
+Has this been closed yet? I just discovered it now and myself and a friend are interested? [[User:Ebel|Ebel]] 11:57, 22 August 2008 (UTC)
 
 == Israel==
 Status : 6/10
