/* 1: Ipkg Utils and ipkg-link */

--- a/Ipkg.mw
+++ b/Ipkg.mw
@@ -58,7 +58,7 @@ The better solution is to use ipkg-link from the 'ipkg-utils' package, but 'bett
 
 ==== 1: Ipkg Utils and ipkg-link ====
 
-Ipkg-utils is a package that provides some additional functionality for ipkg.  A very useful tool is ipkg-link, which creates symbolic lynks for packages installed in non-root locations (such as a card) back to the root file system.
+Ipkg-utils is a package that provides some additional functionality for ipkg.  A very useful tool is ipkg-link, which creates symbolic links for packages installed in non-root locations (such as a card) back to the root file system.
 
 To get ipkg-utils, run:
  ipkg install ipkg-utils
