/* What's New ? */ Add warning on stability

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -9,7 +9,7 @@
 
 = What's New ? =
 
-Compared to 2007.2 that has a longer development history, Om 2008.8 is definitely a .0 major release. So think KDE 4.0 vs. 3.5, not Linux 2.6.23 vs. 2.6.22. If you want the stability level required to use the Freerunner as your main phone, it is suggested that for now to keep 2007.2 in the phone's flash memory and test 2008.8 on a removable SD card.
+Compared to 2007.2 that has a longer development history, Om 2008.8 is definitely a .0 major release. So think KDE 4.0 vs. 3.5, not Linux 2.6.23 vs. 2.6.22. If you want the stability level required to use the Freerunner as your main phone, it is suggested for now to keep 2007.2 in the phone's flash memory and test 2008.8 on a removable SD card.
 
 The main user-visible changes:
 
