--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -123,7 +123,7 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 
 Posterior to the Om2008.8 release, in August 2008 development is switching to a Debian-like model with three branches: stable,  testing and unstable. To minimize chaos, breakage and confusion, official updates for 2008.8 will be made available only when the move is complete ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details.)
 
-In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]] or Raster's builds.
+In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]] or [http://download.enlightenment.org/misc/| Raster's builds].
 
 = Dedication =
 
