/* Cards by Vendor */

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -56,6 +56,8 @@ Note that most vendors are using an irritating way of labeling the capacity of t
 |-
 | SanDisk || SDSDQR-8192-E12M || 8GB (SDHC) || 4 || ? || {{yes}} || ?
 |-
+| SanDisk || SDSDQR-8192-???? || 8GB (SDHC) || 6 || ? || {{yes}} || {{yes}}
+|-
 | Toshiba || SD-512R2W || 512MB || || {{no}} || {{yes}} ||
 |-
 | Transcend || TS128MUSD || 128MB || || {{no}} || {{yes}} || 
