--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -69,9 +69,11 @@ Some Linux and Windows systems have DNS servers, especially those configured as 
 
 You can also add the public DNS server called openDNS:
  echo nameserver 208.67.222.222 > /etc/resolv.conf
+ echo nameserver 208.67.220.220 >> /etc/resolv.conf
 
 These settings will be lost on reboot. You can set the DNS for the next connect, by adding the following to the end of the usb0 setting in /etc/network/interfaces, right above the bluetooth networking section:
- up echo nameserver 208.67.222.222 >/etc/resolv.conf
+ up echo nameserver 208.67.222.222 > /etc/resolv.conf
+ up echo nameserver 208.67.220.220 >> /etc/resolv.conf
 
 == Proxying DNS from Desktop/Laptop ==
 
