*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Sydney.mw
+++ b/Openmoko_Local_Groups:_Sydney.mw
@@ -14,7 +14,7 @@ Welcome to the Sydney Neo1973 interest group.
 |User/Tester
 |Sydney
 | [[Image: Moko.jpg|center]]
-|
+| [[ Image:MokoBox.jpg |center]]v3
 |http://www.bitwise.org
 |-
 |-
