--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -21,7 +21,7 @@ There are various [[bootloader versions]] available.
 
 == General ==
 
-The GTA01 uses the [http://u-boot.sourceforge.net/ u-boot] bootloader.
+All versions of the OM smartphone use the [http://u-boot.sourceforge.net/ u-boot] bootloader.
 
 More information on u-boot can be found at 
 * http://www.denx.de/wiki/DULG
