--- a/Debian.mw
+++ b/Debian.mw
@@ -92,6 +92,24 @@ Then the device should be visible using
 == TangoGPS ==
 {{main|TangoGPS}}
 
+== XFCE ==
+
+xfce is small and lightweight and so quite fast for the Freerunner.
+
+ apt-get install xfce4
+
+Then you may hack /etc/init.d/zhone-session making
+
+ PROG_FSO=/usr/bin/startxfce4
+
+..reboot and check it out...  The desktop took awhile to start but once up was snappy as can be expected.
+I've not yet looked at the reason for the seemingly too slow start for the desktop.
+
+zhone is available from the "Office" menu in xfce.
+The matchbox keyboard is available in "Accessories".
+
+You could create a different init.d start script for xfce instead of hacking...
+
 = Miscellaneous =
 == Making the cursor invisible ==
 To make the cursor invisible create a file called empty.cursor with this content:
